--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,21 +6,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}">
+  {% block title %}
+  {% endblock %}
 </head>
 
 <body>
   <nav>
     <ul style="display: flex; gap: 10px;">
-      <li><a href="/">Home</a></li>
-      <li><a href="/signup">Sign Up</a></li>
-      <li><a href="/signin">Sign In</a></li>
-      <li><a href="/dashboard">Dashboard</a></li>
+      <li><a class="links" href="/">Home</a></li>
+      <li><a class="links" href="/signup">Sign Up</a></li>
+      <li><a class="links" href="/signin">Sign In</a></li>
+      <li><a class="links" href="/dashboard">Dashboard</a></li>
     </ul>
   </nav>
   {% block content %}
   <h1 style="font-size: 3rem;">Welcome</h1>
   <p>Please login</p>
   {% endblock %}
+  <script src="{{ url_for('static', path='/js/index.js') }}"></script>
 </body>
 
 </html>
