--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 style="font-size: 3rem;">Sign Up</h1>
-<form class="box" action="/signup" method="post" style="width: 500px;">
+<form class="box" action="/auth/signup" method="post" style="width: 500px;">
   <div class="field">
     <label for="first_name" class="label">First Name</label>
     <div class="control">
