--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 style="font-size: 3rem;">Sign in</h1>
-<form class="box" action="/signin" method="post" style="width: 500px;">
+<form class="box" action="/auth/signin" method="post" style="width: 500px;">
   <div class="field">
     <label class="label">Username</label>
     <div for="username" class="control">
