--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,8 +21,8 @@
     </ul>
   </nav>
   {% block content %}
-  <h1 style="font-size: 3rem;">Welcome</h1>
-  <p>Please login</p>
+  <h1 style="font-size: 3rem;">Schedulearn</h1>
+  <p>Schedulearn is a platform that makes scheduling deep learning models easy.</p>
   {% endblock %}
   <script src="{{ url_for('static', path='/js/index.js') }}"></script>
 </body>
