feat: save files locally

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -45,7 +45,7 @@
         <input class="input" type="file" name="file" placeholder="Upload File" style="width: 500px;">
       </div>
     </div>
-    <button class="button is-primary" style="margin-top:10px;">Sign in</button>
+    <button class="button is-primary" style="margin-top:10px;">Submit</button>
 </form>
 {% else %}
 <h1>Unauthorized</h1>
