--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-  <title>Sign Up</title>
+  <title>Schedulearn - Scheduling Deep Learning Models Made Easy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}">
   {% block title %}
@@ -34,7 +35,8 @@
     <p>Schedulearn is a platform that makes scheduling deep learning models easy.</p>
     {% endblock %}
   </main>
-  <script src="{{ url_for('static', path='/js/index.js') }}"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="{{ url_for('static', path='/js/app.js') }}"></script>
 </body>
 
 </html>
