feat: UI redesign

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -2,72 +2,54 @@
 
 {% block content %}
 {% if user %}
-<h1 style="font-size: 3rem;">
-  Welcome {{ user.username }}
-</h1>
-
-<div style="margin-left: 50px;">
-  <form class="box" action="/job/add" method="post" enctype="multipart/form-data">
-    <div class="field" style="margin-bottom: 20px;">
-      <label class="label">Job Name</label>
-      <div for="job_name" class="control">
-        <input class="input" type="text" name="job_name" placeholder="PyTorch Job 1" style="width: 600px;">
+<div>
+  {% include "components/navbar.html" %}
+  <div class="block">
+    <div class="columns">
+      <div class="column is-one-fourth card">
+        <h1 class="title is-6">Users</h1>
+        <p>Normal</p>
+        <p>Normal</p>
+        <p>Normal</p>
+      </div>
+      <div class="column is-0"></div>
+      <div class="column is-one-fourth card">
+        <h1 class="title is-6">Jobs</h1>
+        <p>Normal</p>
+      </div>
+      <div class="column is-0"></div>
+      <div class="column is-one-fourth card">
+        <h1 class="title is-6">Server</h1>
+        <p>Normal</p>
+      </div>
+      <div class="column is-0"></div>
+      <div class="column is-one-fourth card">
+        <h1 class="title is-6">Utilization</h1>
+        <p>Normal</p>
       </div>
     </div>
-    <div class="field">
-      <label class="label">Job Type</label>
-      <div class="control" style="margin-bottom: 20px;">
-        <label class="radio">
-          <input type="radio" name="job_type" value="PyTorch">
-          PyTorch
-        </label>
-        <label class="radio">
-          <input type="radio" name="job_type" value="PyTorch Lightning">
-          PyTorch Lightning
-        </label>
-        <label class="radio">
-          <input type="radio" name="job_type" value="TensorFlow">
-          TensorFlow
-        </label>
-        <label class="radio">
-          <input type="radio" name="job_type" value="Apache MXNet">
-          Apache MXNet
-        </label>
-        <label class="radio">
-          <input type="radio" name="job_type" value="Keras">
-          Keras
-        </label>
+  </div>
+  
+  <div class="block">
+    <div class="columns is-half-fullhd is-half-widescreen is-half-desktop is-full-tablet is-full-mobile">
+      <div class="column auto card">
+        <h1 class="title is-6">Server</h1>
       </div>
-      <div class="field" style="margin-bottom: 20px;">
-        <label class="label">Upload File</label>
-        <div class="control">
-          <input class="input" type="file" name="file" placeholder="Upload File" style="width: 600px;">
-        </div>
+      <div class="column is-0"></div>
+      <div class="column auto card">
+        <h1 class="title is-6">GPU Utilization</h1>
       </div>
-      <button class="button is-primary" style="margin-top:10px;">Submit</button>
-  </form>
-</div>
-<div style="display: flex; flex-direction: column; align-items: center; justify-content: center; margin-top: 50px;">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Type</th>
-        <th>File Location</th>
-        <th>Created at</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for job in jobs %}
-      <tr>
-        <td>{{ job.name }}</td>
-        <td>{{ job.type }}</td>
-        <td>{{ job.script }}</td>
-        <td>{{ job.created_at }}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+    </div>
+  </div>
+
+  <div class="columns block row" >
+    <div class="column auto card" style="padding: 2rem;">
+      <h1 class="title is-6 block">Recent Jobs</h1>
+      {% with jobs = user_jobs %}
+        {% include "components/job_table.html" %}
+      {% endwith %}
+    </div>
+  </div>
 </div>
 {% else %}
 <h1 style="font-size: 3rem;">
@@ -75,4 +57,55 @@
   <a href="/signin">Sign in</a>
 </h1>
 {% endif %}
+<style>
+  .dashboard-tiles {
+    display: block;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 20px;
+  }
+</style>
+
+<script>
+  const ctx = document.getElementById('myChart');
+  const ctx2 = document.getElementById('myChart2');
+
+  new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+      datasets: [{
+        label: '# of Votes',
+        data: [12, 19, 3, 5, 2, 3],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+
+  new Chart(ctx2, {
+    type: 'bar',
+    data: {
+      labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+      datasets: [{
+        label: '# of Votes',
+        data: [12, 19, 3, 5, 2, 3],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+</script>
 {% endblock %}
