--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -8,34 +8,22 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script crossorigin="anonymous" src="https://unpkg.com/htmx.org@1.8.6"
+    integrity="sha384-Bj8qm/6B+71E6FQSySofJOUjA/gq330vEqjFx9LakWybUySyI1IQHwPtbTU7bNwx"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
   {% block title %}
   {% endblock %}
 </head>
 
-<!-- make body sits right in the middle of the screen -->
-
-<body>
-  <nav>
-    <ul style="display: flex; gap: 10px;">
-      <li><a class="links" href="/">Home</a></li>
-      {% if not user %}
-      <li><a class="links" href="/signup">Sign Up</a></li>
-      <li><a class="links" href="/signin">Sign In</a></li>
-      {% endif %}
-      {% if user %}
-      <li><a class="links" href="/dashboard">Dashboard</a></li>
-      <li><a class="links" href="/settings">Settings</a></li>
-      <li><a class="links" href="/auth/signout">Sign Out</a></li>
-      {% endif %}
-    </ul>
-  </nav>
-  <main style="display: flex; flex-direction: column; align-items: center; justify-content: center; margin-top: 100px;">
+<body class="section">
+  <main>
     {% block content %}
-    <h1 style="font-size: 3rem;">Schedulearn</h1>
-    <p>Schedulearn is a platform that makes scheduling deep learning models easy.</p>
+    {% include "components/navbar.html" %}
+    <h1 class="block" style="font-size: 3rem;">Schedulearn</h1>
+    <p class="block">Schedulearn is a platform that makes scheduling deep learning models easy.</p>
     {% endblock %}
   </main>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="{{ url_for('static', path='/js/app.js') }}"></script>
 </body>
 
