--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -1,22 +1,24 @@
 {% extends "index.html" %}
-
 {% block content %}
-<h1 style="font-size: 3rem;">Sign in</h1>
-<form class="box" action="/auth/signin" method="post" style="width: 500px;">
-  <div class="field">
-    <label class="label">Username</label>
-    <div for="username" class="control">
-      <input class="input" type="text" name="username" placeholder="johndoe">
+<div>
+  {% include "components/navbar.html" %}
+  <h1 style="font-size: 3rem;">Sign in</h1>
+  <form class="box" action="/auth/signin" method="post" style="width: 500px;">
+    <div class="field">
+      <label class="label">Username</label>
+      <div for="username" class="control">
+        <input class="input" type="text" name="username" placeholder="johndoe">
+      </div>
     </div>
-  </div>
 
-  <div class="field">
-    <label for="password" class="label">Password</label>
-    <div class="control">
-      <input class="input" type="password" name="password" placeholder="********">
+    <div class="field">
+      <label for="password" class="label">Password</label>
+      <div class="control">
+        <input class="input" type="password" name="password" placeholder="********">
+      </div>
     </div>
-  </div>
 
-  <button class="button is-primary">Sign in</button>
-</form>
+    <button class="button is-primary">Sign in</button>
+  </form>
+</div>
 {% endblock %}
