--- a/app/templates/dashboard/profile.html
+++ b/app/templates/dashboard/profile.html
@@ -4,20 +4,10 @@
 <div>
     {% include "components/navbar.html" %}
     <div class="columns block row">
-        <div class="column auto card box" style="padding: 2rem;">
-            <div class="centered">
-                <figure class="image is-128x128 block">
-                    <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
-                </figure>
-                <p class="title">{{ user.first_name }} {{ user.last_name }}</p>
-                <p class="subtitle block">{{ user.username }}</p>
-            </div>
-        </div>
-        <div class="column is-0"></div>
         <div class="column auto box card" style="padding: 2rem;">
             <div class="block" style="display: flex; align-items: center;">
-                <i class="fas fa-pen-to-square" style="margin-right: 10px;"></i>
-                <h1 class="card-title">Edit Profile</h1>
+                <i class="fas fa-pen-to-square fa-2xl" style="margin-right: 10px;"></i>
+                <h1 class="title is-3">Edit Profile</h1>
             </div>
             <form>
                 <div class="field">
@@ -44,23 +34,14 @@
                         <input class="input" type="text" name="email" id="email" value="{{ user.email }}">
                     </div>
                 </div>
-                <button class="button is-primary">Edit</button>
+                <button class="button is-link">Edit</button>
             </form>
-        </div>
-    </div>
 
-    <div class="columns block row">
-        <div class="column box card auto" style="padding: 2rem;">
-            <div class="centered">
-                <p class="subtitle">Email</p>
-                <p><i class="fas fa-envelope" style="margin-right: 0.5rem;"></i> {{ user.email }}</p>
-            </div>
-        </div>
-        <div class="column is-0"></div>
-        <div class="column box card auto" style="padding: 2rem;">
+            <hr />
+
             <div class="block" style="display: flex; align-items: center;">
-                <i class="fas fa-lock" style="margin-right: 10px;"></i>
-                <h1 class="card-title">
+                <i class="fas fa-lock fa-2xl" style="margin-right: 10px;"></i>
+                <h1 class="title is-3">
                     Change Password
                 </h1>
             </div>
@@ -71,12 +52,17 @@
                         <input class="input" type="password" name="current_password" id="current_password">
                     </div>
                 </div>
-                <hr />
                 <div class="field">
                     <label for="password">Password</label>
                     <div for="password" class="control">
                         <input class="input" type="password" name="password" id="password" value="{{ user.password }}">
                     </div>
+                    <p class="has-text-grey">
+                        <small>
+                            <i class="fas fa-info-circle" style="margin-right: 0.5rem;"></i>
+                            The new password must have at least 8 characters, 1 uppercase letter, and 1 number.
+                        </small>
+                    </p>
                 </div>
                 <div class="field">
                     <label for="confirm_password">Confirm Password</label>
@@ -85,8 +71,26 @@
                             value="{{ user.password }}">
                     </div>
                 </div>
-                <button class="button is-primary">Change</button>
+                <button class="button is-link">Change</button>
             </form>
+        </div>
+
+        <div class="column is-0"></div>
+
+        <div class="column auto card box" style="height: 500px; padding: 2rem;">
+            {% if user.admin %}
+            <div style="position: absolute; top: 10px; left: 10px;">
+                <div class="tag is-primary">Admin</div>
+            </div>
+            {% endif %}
+            <div class="centered">
+                <figure class="image is-128x128 block">
+                    <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                </figure>
+                <p class="title">{{ user.first_name }} {{ user.last_name }}</p>
+                <p class="subtitle block">{{ user.username }}</p>
+                <p><i class="fas fa-envelope" style="margin-right: 0.5rem;"></i> {{ user.email }}</p>
+            </div>
         </div>
     </div>
 </div>
