--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,8 +12,7 @@
   <script crossorigin="anonymous" src="https://unpkg.com/htmx.org@1.8.6"
     integrity="sha384-Bj8qm/6B+71E6FQSySofJOUjA/gq330vEqjFx9LakWybUySyI1IQHwPtbTU7bNwx"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-  {% block title %}
-  {% endblock %}
+  <link rel="icon" sizes="180x180" href="{{ url_for('static', path='/images/logo.png') }}">
 </head>
 
 <body class="section">
