--- a/app/templates/dashboard/jobs.html
+++ b/app/templates/dashboard/jobs.html
@@ -1,28 +1,29 @@
 {% extends "index.html" %}
-
 {% block content %}
-<div>
-    {% include "components/navbar.html" %}
-    <div class="block">
-        <div class="columns is-multiline">
-            {% for job in jobs %}
-            <a href="/jobs/{{ job.id }}"
-                class="column is-one-third-fullhd is-one-third-widescreen is-one-third-desktop is-one-third-tablet is-full-mobile">
-                <div class="card" style="height: 100%;">
-                    <div class="card-content">
-                        <div>
-                            <p class="title is-4">{{ job.name }}</p>
-                            <p class="subtitle is-6">{{ job.type }}</p>
-                            <progress class="progress is-success" value="30" max="100">60%</progress>
-                        </div>
-                        <figure class="image is-64x64" style="position: absolute; top: 20px; right: 20px;">
-                            <img class="is-rounded" src="https://bulma.io/images/placeholders/64x64.png">
-                        </figure>
+{% include "components/navbar.html" %}
+<div class="block">
+    <a class="button is-info block" href="/jobs/create">
+        <i class="fa-solid fa-file-circle-plus" style="margin-right: 10px;"></i>
+        Create Job
+    </a>
+    <div class="columns is-multiline">
+        {% for job in jobs %}
+        <a href="/jobs/{{ job.id }}"
+            class="column is-one-third-fullhd is-one-third-widescreen is-one-third-desktop is-one-third-tablet is-full-mobile">
+            <div class="card" style="height: 100%;">
+                <div class="card-content">
+                    <div>
+                        <p class="title is-4">{{ job.name }}</p>
+                        <p class="subtitle is-6">{{ job.type }}</p>
+                        <progress class="progress is-success" value="30" max="100">60%</progress>
                     </div>
+                    <figure class="image is-64x64" style="position: absolute; top: 20px; right: 20px;">
+                        <img class="is-rounded" src="https://bulma.io/images/placeholders/64x64.png">
+                    </figure>
                 </div>
-            </a>
-            {% endfor %}
-        </div>
+            </div>
+        </a>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
