--- a/app/templates/dashboard/users.html
+++ b/app/templates/dashboard/users.html
@@ -3,6 +3,10 @@
 {% block content %}
 <div>
     {% include "components/navbar.html" %}
+    <a class="button is-info block" href="/users/create">
+        <i class="fa-solid fa-user-plus" style="margin-right: 10px;"></i>
+        Create User
+    </a>
     <div class="columns is-multiline">
         {% for user in users %}
         <a class="column is-one-third-fullhd is-one-third-widescreen is-one-third-desktop is-half-tablet is-full-mobile"
@@ -15,8 +19,14 @@
                         </figure>
                         <div style="margin-left: 20px;">
                             <p>{{ user.first_name }} {{ user.last_name }} </p>
-                            <p style="font-size: 0.75rem">{{ user.username }}</p>
-                            <p style="font-size: 0.75rem">{{ user.email }}</p>
+                            <p style="font-size: 0.9rem" class="has-text-grey">
+                                <i class="fas fa-user" style="margin-right: 5px;"></i>
+                                {{ user.username }}
+                            </p>
+                            <p style=" font-size: 0.9rem" class="has-text-grey">
+                                <i class="fas fa-envelope" style="margin-right: 5px;"></i>
+                                {{ user.email }}
+                            </p>
                         </div>
                     </div>
                     {% if user.admin %}
