fix: page endpoints now returns the correct pages and values

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -2,52 +2,62 @@
 
 {% block content %}
 {% if user %}
-<div>
-  {% include "components/navbar.html" %}
+{% include "components/navbar.html" %}
+<div class="container">
   <div class="block">
     <div class="columns">
-      <div class="column is-one-fourth card">
-        <h1 class="title is-6">Users</h1>
-        <p>Normal</p>
-        <p>Normal</p>
-        <p>Normal</p>
+      <div class="column is-one-fourth card" style="display: flex;">
+        <div>
+          <p>Total Users</p>
+          <p class="title is-3">{{ users | length }}</p>
+        </div>
+        <i class="fas fa-users fa-2xl" style="margin: auto 0 auto auto;"></i>
       </div>
       <div class="column is-0"></div>
-      <div class="column is-one-fourth card">
-        <h1 class="title is-6">Jobs</h1>
-        <p>Normal</p>
+      <div class="column is-one-fourth card"  style="display: flex;">
+        <div>
+          <p>Total Jobs</p>
+          <p class="title is-3">{{ jobs | length }}</p>
+        </div>
+        <i class="fas fa-tasks fa-2xl" style="margin: auto 0 auto auto;"></i>
       </div>
       <div class="column is-0"></div>
-      <div class="column is-one-fourth card">
-        <h1 class="title is-6">Server</h1>
-        <p>Normal</p>
+      <div class="column is-one-fourth card"  style="display: flex;">
+        <div>
+          <p>Total Servers</p>
+          <p class="title is-3">{{ no_of_servers }}</p>
+        </div>
+        <i class="fas fa-server fa-2xl" style="margin: auto 0 auto auto;"></i>
       </div>
       <div class="column is-0"></div>
-      <div class="column is-one-fourth card">
-        <h1 class="title is-6">Utilization</h1>
-        <p>Normal</p>
-      </div>
-    </div>
-  </div>
-  
-  <div class="block">
-    <div class="columns is-half-fullhd is-half-widescreen is-half-desktop is-full-tablet is-full-mobile">
-      <div class="column auto card">
-        <h1 class="title is-6">Server</h1>
-      </div>
-      <div class="column is-0"></div>
-      <div class="column auto card">
-        <h1 class="title is-6">GPU Utilization</h1>
+      <div class="column is-one-fourth card"  style="display: flex;">
+        <div>
+          <p>Total GPUs</p>
+          <p class="title is-3">{{ no_of_gpus }}</p>
+        </div>
+        <i class="fas fa-microchip fa-2xl" style="margin: auto 0 auto auto;"></i>
       </div>
     </div>
   </div>
 
-  <div class="columns block row" >
-    <div class="column auto card" style="padding: 2rem;">
-      <h1 class="title is-6 block">Recent Jobs</h1>
-      {% with jobs = user_jobs %}
-        {% include "components/job_table.html" %}
-      {% endwith %}
+  <div class="block">
+    <div class="columns is-multiline">
+      <div class="column card auto">
+        <h1 class="title is-4">Server Analytics</h1>
+      </div>
+      <div class="column is-0"></div>
+      <div class="column card auto">
+        <h1 class="title is-4">GPU Utilization</h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="columns block" >
+    <div class="column auto card">
+      <h1 class="title is-4 block">Recent Jobs</h1>
+        {% with jobs = jobs %}
+          {% include "components/job_table.html" %}
+        {% endwith %}
     </div>
   </div>
 </div>
