--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %}
 {% block content %}
-<div>
-  {% include "components/navbar.html" %}
+{% include "components/navbar.html" %}
+<div class="container">
   <h1 style="font-size: 3rem;">Sign in</h1>
   <form class="box" action="/auth/signin" method="post" style="width: 500px;">
     <div class="field">
