--- a/app/templates/dashboard/profile.html
+++ b/app/templates/dashboard/profile.html
@@ -1,8 +1,8 @@
 {% extends "index.html" %}
 
 {% block content %}
-<div>
-    {% include "components/navbar.html" %}
+{% include "components/navbar.html" %}
+<div class="container">
     <div class="columns block row">
         <div class="column auto card box" style="height: 500px; padding: 2rem;">
             {% if user.admin %}
@@ -24,8 +24,8 @@
 
         <div class="column auto box card" style="padding: 2rem;">
             <div class="block" style="display: flex; align-items: center;">
-                <i class="fas fa-pen-to-square fa-xl" style="margin-right: 10px;"></i>
-                <h1 class="title is-4">Edit Profile</h1>
+                <i class="fas fa-pen-to-square fa-lg" style="margin-right: 10px;"></i>
+                <h1 class="title is-5">Edit Profile</h1>
             </div>
             <form>
                 <div class="field">
@@ -53,14 +53,14 @@
                         <input class="input" type="text" name="email" id="email" value="{{ user.email }}">
                     </div>
                 </div>
-                <button class="button is-link">Edit</button>
+                <button class="button is-info">Submit</button>
             </form>
 
             <hr />
 
             <div class="block" style="display: flex; align-items: center;">
-                <i class="fas fa-lock fa-xl" style="margin-right: 10px;"></i>
-                <h1 class="title is-4">
+                <i class="fas fa-lock fa-lg" style="margin-right: 10px;"></i>
+                <h1 class="title is-5">
                     Change Password
                 </h1>
             </div>
@@ -78,7 +78,7 @@
                     </div>
                     <p class="has-text-grey">
                         <small>
-                            <i class="fas fa-info-circle" style="margin-right: 0.5rem;"></i>
+                            <i class="fas fa-info-circle" style="margin-right: 5px;"></i>
                             The new password must have at least 8 characters, 1 uppercase letter, and 1 number.
                         </small>
                     </p>
@@ -90,7 +90,7 @@
                             value="{{ user.password }}">
                     </div>
                 </div>
-                <button class="button is-link">Change</button>
+                <button class="button is-info">Submit</button>
             </form>
         </div>
     </div>
