--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,12 +15,14 @@
   <link rel="icon" sizes="180x180" href="{{ url_for('static', path='/images/logo.png') }}">
 </head>
 
-<body class="section">
+<body>
   <main>
     {% block content %}
     {% include "components/navbar.html" %}
-    <h1 class="block" style="font-size: 3rem;">Schedulearn</h1>
-    <p class="block">Schedulearn is a platform that makes scheduling deep learning models easy.</p>
+    <div class="container">
+      <h1 class="block" style="font-size: 3rem;">Schedulearn</h1>
+      <p class="block">Schedulearn is a platform that makes scheduling deep learning models easy.</p>
+    </div>
     {% endblock %}
   </main>
   <script src="{{ url_for('static', path='/js/app.js') }}"></script>
